# MentalAssistant

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: activity.rs  cli.rs  emotions.rs  energy.rs  main.rs  meds.rs  mood.rs  overall_mental_state.rs  sleep.rs  traits.rs
tests/: cli.rs
